[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "python_code_parse"
authors = [
    {name = "Jake Cyr", email = "cyrjake@gmail.com"},
]
version = "0.0.10"
description = "Parse code to get information about functions, etc."
readme = "README.md"
requires-python = ">=3.7"
keywords = ["code", "parse", "python", "ast", "abstract syntax tree"]
license = {text = "MIT"}
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "twine",
  "wheel",
  "black",
  "isort",
  "flake8",
]

[tool.distutils.bdist_wheel]
universal = true

[tool.black]
line-length = 79

[tool.isort]
line_length = 79
multi_line_output = 3
include_trailing_comma = true
profile = "black"
